<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Верхня частина екрану -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="left|bottom"
        android:background="@drawable/layered_background"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="76sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <!-- Нижня частина екрану -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/gradient_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_into_nmanage_your_device"
            android:textSize="16sp"
            android:textColor="#8A7051"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/textEmailLogIn"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/email_for_edittext"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="#593A16"
            android:textColorHint="#593A16"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/textPasswordLogIn"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/lock_for_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#593A16"
            android:textColorHint="#593A16"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="188dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <ImageView
            android:id="@+id/signInWithGmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/log_in_gmail"
            tools:srcCompat="@drawable/log_in_gmail" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:alpha="1"
            android:backgroundTint="#FDA43C"
            android:onClick="readData"
            android:text="@string/log_in"
            android:textColor="#000000"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="306dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="16sp"
            android:textColor="#6C5A45"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="246dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textViewToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="openRegister"
            android:text="@string/sign_up"
            android:textColor="#FDA43C"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="246dp" />

    </LinearLayout>

</LinearLayout>