<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sweet_amp_smart_home"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#FDA43C"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/smart_home_can_change_the_way_you_live_in_the_future"
            android:textAlignment="center"
            android:textColor="#FDA43C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/if_you_want_to_be_smart_n_click_the_button_below"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#FDA43C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonToStartApp"
            android:layout_width="228dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#FDA43C"
            android:onClick="openRegister"
            android:text="@string/get_smart"
            android:textColor="#000000"
            android:textStyle="bold" />

</LinearLayout>